--- a/index.html
+++ b/index.html
@@ -24,31 +24,6 @@
   </head>
 
   <body>
-    
-    <!-- <section class="container-fluid py-3 shadow-lg ">
-      <div class="container ">
-        <div class="row align-items-center">
-          <div class="col-6 logo">
-            <a href="#"><img src="img/logo1.png" alt="logo" /></a>
-          </div>
-          <div  class="col-6 nav-links">
-            <ul class="d-flex justify-content-evenly list-unstyled text-decoration-none">
-              <li><a href="">Home</a></li>
-              <li><a href="">Shop</a></li>
-              <li><a href="">Blog</a></li>
-              <li><a href="">About</a></li>
-              <li><a href="">Contact Us</a></li>
-              <li><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
-              <li><a href=""><i class="fa-solid fa-shopping-bag"></i></a></li>
-             
-            </ul>
-            <div class="d-none toggle-btn">
-                <i class="fa-solid fa-bars"></i>
-                </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
           <!-- Navbar  -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary py-3 fixed-top">
         <div class="container">
@@ -124,6 +99,70 @@
           </div>
         </div>
        </section>
+
+       <section id="featured" class="my-5 pb-5">
+        <div class="container text-center mt-5 py-5">
+          <h3>Our Featured</h3>
+          <hr>
+          <p>Here you can check out our new products with fair price on rymo</p>
+        </div>
+        <div class="row mx-auto container-fluid">
+          <div class="product text-center col-lg-3 col-md-4 col-12">
+            <img class="img-fluid mb-3" src="img/featured/1.jpg" alt="">
+            <div class="star">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h5 class="p-name">Sport Boots</h5>
+            <h4 class="p-price">$92.00</h4>
+            <button class="buy-btn">Buy Now</button>
+          </div>
+          <div class="product text-center col-lg-3 col-md-4 col-12">
+            <img class="img-fluid mb-3" src="img/featured/2.jpg" alt="">
+            <div class="star">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h5 class="p-name">Sport Boots</h5>
+            <h4 class="p-price">$92.00</h4>
+            <button class="buy-btn">Buy Now</button>
+          </div>
+          <div class="product text-center col-lg-3 col-md-4 col-12">
+            <img class="img-fluid mb-3" src="img/featured/3.jpg" alt="">
+            <div class="star">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h5 class="p-name">Sport Boots</h5>
+            <h4 class="p-price">$92.00</h4>
+            <button class="buy-btn">Buy Now</button>
+          </div>
+          <div class="product text-center col-lg-3 col-md-4 col-12">
+            <img class="img-fluid mb-3" src="img/featured/4.jpg" alt="">
+            <div class="star">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h5 class="p-name">Sport Boots</h5>
+            <h4 class="p-price">$92.00</h4>
+            <button class="buy-btn">Buy Now</button>
+          </div>
+        </div>
+       </section>
+
+
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
