--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
        <section id="featured" class="my-5 pb-5">
         <div class="container text-center mt-5 py-5">
           <h3>Our Featured</h3>
-          <hr>
+          <hr class="mx-auto">
           <p>Here you can check out our new products with fair price on rymo</p>
         </div>
         <div class="row mx-auto container-fluid">
@@ -162,6 +162,270 @@
         </div>
        </section>
 
+       <section id="banner" class="my-5 py-5">
+        <div class="container">
+          <h4>MID SEASON'S SALE</h4>
+          <h1>Autumn Collection <br>
+            UP To 20% OFF
+          </h1>
+          <button class="text-uppercase">Shop Now</button>
+        </div>
+       </section>
+
+       <section id="clothes" class="my-5 ">
+        <div class="container text-center mt-5 py-5">
+          <h3>Dresses & Jumpsuits</h3>
+          <hr class="mx-auto">
+          <p>Here you can check out our new products with fair price on rymo</p>
+        </div>
+        <div class="row mx-auto container-fluid">
+          <div class="product text-center col-lg-3 col-md-4 col-12">
+            <img class="img-fluid mb-3" src="img/clothes/1.jpg" alt="">
+            <div class="star">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h5 class="p-name">Sport Boots</h5>
+            <h4 class="p-price">$92.00</h4>
+            <button class="buy-btn">Buy Now</button>
+          </div>
+          <div class="product text-center col-lg-3 col-md-4 col-12">
+            <img class="img-fluid mb-3" src="img/clothes/2.jpg" alt="">
+            <div class="star">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h5 class="p-name">Sport Boots</h5>
+            <h4 class="p-price">$92.00</h4>
+            <button class="buy-btn">Buy Now</button>
+          </div>
+          <div class="product text-center col-lg-3 col-md-4 col-12">
+            <img class="img-fluid mb-3" src="img/clothes/3.jpg" alt="">
+            <div class="star">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h5 class="p-name">Sport Boots</h5>
+            <h4 class="p-price">$92.00</h4>
+            <button class="buy-btn">Buy Now</button>
+          </div>
+          <div class="product text-center col-lg-3 col-md-4 col-12">
+            <img class="img-fluid mb-3" src="img/clothes/1.jpg" alt="">
+            <div class="star">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h5 class="p-name">Sport Boots</h5>
+            <h4 class="p-price">$92.00</h4>
+            <button class="buy-btn">Buy Now</button>
+          </div>
+        </div>
+       </section>
+
+       <section id="watches" class="my-5 ">
+        <div class="container text-center mt-5 py-5">
+          <h3>Best Watches</h3>
+          <hr class="mx-auto">
+          <p>Here you can check out our new products with fair price on rymo</p>
+        </div>
+        <div class="row mx-auto container-fluid">
+          <div class="product text-center col-lg-3 col-md-4 col-12">
+            <img class="img-fluid mb-3" src="img/watches/1.jpg" alt="">
+            <div class="star">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h5 class="p-name">Sport Boots</h5>
+            <h4 class="p-price">$92.00</h4>
+            <button class="buy-btn">Buy Now</button>
+          </div>
+          <div class="product text-center col-lg-3 col-md-4 col-12">
+            <img class="img-fluid mb-3" src="img/watches/2.jpg" alt="">
+            <div class="star">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h5 class="p-name">Sport Boots</h5>
+            <h4 class="p-price">$92.00</h4>
+            <button class="buy-btn">Buy Now</button>
+          </div>
+          <div class="product text-center col-lg-3 col-md-4 col-12">
+            <img class="img-fluid mb-3" src="img/watches/3.jpg" alt="">
+            <div class="star">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h5 class="p-name">Sport Boots</h5>
+            <h4 class="p-price">$92.00</h4>
+            <button class="buy-btn">Buy Now</button>
+          </div>
+          <div class="product text-center col-lg-3 col-md-4 col-12">
+            <img class="img-fluid mb-3" src="img/watches/1.jpg" alt="">
+            <div class="star">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h5 class="p-name">Sport Boots</h5>
+            <h4 class="p-price">$92.00</h4>
+            <button class="buy-btn">Buy Now</button>
+          </div>
+        </div>
+       </section>
+
+
+       <section id="shoes" class="my-5 pb-5">
+        <div class="container text-center mt-5 py-5">
+          <h3>Running Shoes</h3>
+          <hr class="mx-auto">
+          <p>Here you can check out our new products with fair price on rymo</p>
+        </div>
+        <div class="row mx-auto container-fluid">
+          <div class="product text-center col-lg-3 col-md-4 col-12">
+            <img class="img-fluid mb-3" src="img/shoes/8.jpg" alt="">
+            <div class="star">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h5 class="p-name">Sport Boots</h5>
+            <h4 class="p-price">$92.00</h4>
+            <button class="buy-btn">Buy Now</button>
+          </div>
+          <div class="product text-center col-lg-3 col-md-4 col-12">
+            <img class="img-fluid mb-3" src="img/shoes/7.jpg" alt="">
+            <div class="star">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h5 class="p-name">Sport Boots</h5>
+            <h4 class="p-price">$92.00</h4>
+            <button class="buy-btn">Buy Now</button>
+          </div>
+          <div class="product text-center col-lg-3 col-md-4 col-12">
+            <img class="img-fluid mb-3" src="img/shoes/6.jpg" alt="">
+            <div class="star">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h5 class="p-name">Sport Boots</h5>
+            <h4 class="p-price">$92.00</h4>
+            <button class="buy-btn">Buy Now</button>
+          </div>
+          <div class="product text-center col-lg-3 col-md-4 col-12">
+            <img class="img-fluid mb-3" src="img/shoes/5.jpg" alt="">
+            <div class="star">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h5 class="p-name">Sport Boots</h5>
+            <h4 class="p-price">$92.00</h4>
+            <button class="buy-btn">Buy Now</button>
+          </div>
+        </div>
+       </section>
+
+
+        <footer class="mt-5 py-5">
+          <div class="row container mx-auto pt-5"> 
+            <div class="footer-one col-lg-3 col-md-6 col-12">
+              <img src="img/logo2.png " alt="">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, illo asequi distinctio. Dolore earum eaque autem rem id officiis consequuntur.</p>
+            </div>
+            <div class="footer-one col-lg-3 col-md-6 col-12">
+              <h5 class="pb-2">Featured</h5>
+              <ul class="text-uppercase list-unstyled">
+                <li><a href="#">men</a></li>
+                <li><a href="#">women</a></li>
+                <li><a href="#">boys</a></li>
+                <li><a href="#">girls</a></li>
+                <li><a href="#">new arrivals</a></li>
+                <li><a href="#">shoes</a></li>
+                <li><a href="#">cloths</a></li>
+              </ul>
+            </div>
+            <div class="footer-one col-lg-3 col-md-6 col-12">
+              <h5 class="pb-2">Contact Us</h5>
+              <div>
+                <h6 class="text-uppercase">
+                  Address
+                </h6>
+                <p>123 STREET NAME, CITY, US</p>
+              </div>
+              <div>
+                <h6 class="text-uppercase">
+                  Phone
+                </h6>
+                <p>(123) 456-7890</p>
+              </div>
+              <div>
+                <h6 class="text-uppercase">
+                  Email
+                </h6>
+                <p>MAIL@EXAPMLE.COM</p>
+              </div>
+            </div>
+            <div class="footer-one col-lg-3 col-md-6 col-12">
+              <h5 class="pb-2">Instagram</h5>
+              <div class="row">
+                <img class="img-fluid w-25 h-100 m-1" src="img/insta/1.jpg" alt="">
+                <img class="img-fluid w-25 h-100 m-1" src="img/insta/2.jpg" alt="">
+                <img class="img-fluid w-25 h-100 m-1" src="img/insta/3.jpg" alt="">
+                <img class="img-fluid w-25 h-100 m-1" src="img/insta/4.jpg" alt="">
+                <img class="img-fluid w-25 h-100 m-1" src="img/insta/5.jpg" alt="">
+              </div>
+            </div>
+          </div>
+          <div class="copyright mt-5">
+            <div class="row container mx-auto">
+              <div class="col-lg-3 col-md-6 col-12">
+                <img src="img/payment.png" alt="">
+              </div>
+              <div class="col-lg-4 col-md-6 col-12 text-nowrap">
+                <p>rymo eCommerce &copy; 2025. All Rights Reserved</p>
+              </div>
+              <div class="col-lg-4 col-md-6 col-12">
+                <a href="@"><i class="fa-brands fa-facebook"></i></a>
+                <a href="@"><i class="fa-brands fa-twitter"></i></a>
+                <a href="@"><i class="fa-brands fa-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
+        </footer>
 
 
     <script
