--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <body>
           <!-- Navbar  -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary py-3 fixed-top">
+    <nav class="navbar navbar-expand-lg bg-white py-3 fixed-top">
         <div class="container">
           <img src="img/logo1.png" alt="logo">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -364,9 +364,9 @@
           <div class="row container mx-auto pt-5"> 
             <div class="footer-one col-lg-3 col-md-6 col-12">
               <img src="img/logo2.png " alt="">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, illo asequi distinctio. Dolore earum eaque autem rem id officiis consequuntur.</p>
+              <p class="pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, illo asequi distinctio. Dolore earum eaque autem rem id officiis consequuntur.</p>
             </div>
-            <div class="footer-one col-lg-3 col-md-6 col-12">
+            <div class="footer-one col-lg-3 col-md-6 col-12 mb-3">
               <h5 class="pb-2">Featured</h5>
               <ul class="text-uppercase list-unstyled">
                 <li><a href="#">men</a></li>
@@ -378,7 +378,7 @@
                 <li><a href="#">cloths</a></li>
               </ul>
             </div>
-            <div class="footer-one col-lg-3 col-md-6 col-12">
+            <div class="footer-one col-lg-3 col-md-6 col-12 mb-3">
               <h5 class="pb-2">Contact Us</h5>
               <div>
                 <h6 class="text-uppercase">
@@ -412,16 +412,16 @@
           </div>
           <div class="copyright mt-5">
             <div class="row container mx-auto">
-              <div class="col-lg-3 col-md-6 col-12">
+              <div class="col-lg-3 col-md-6 col-12 mb-4">
                 <img src="img/payment.png" alt="">
               </div>
-              <div class="col-lg-4 col-md-6 col-12 text-nowrap">
+              <div class="col-lg-4 col-md-6 col-12 text-nowrap mb-2">
                 <p>rymo eCommerce &copy; 2025. All Rights Reserved</p>
               </div>
               <div class="col-lg-4 col-md-6 col-12">
-                <a href="@"><i class="fa-brands fa-facebook"></i></a>
-                <a href="@"><i class="fa-brands fa-twitter"></i></a>
-                <a href="@"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
               </div>
             </div>
           </div>
